Finish integration tests